--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # database configs
 spring.datasource.url=jdbc:mysql://localhost:3306/exam_portal
-spring.datasource.username=db-username
-spring.datasource.password=db-password
+spring.datasource.username=root
+spring.datasource.password=password
 
 #spring.datasource.driver-class=com.cj.jdbc.Driver
 
